<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="5dp"
    android:layout_marginBottom="5dp"
    app:cardCornerRadius="25dp"
    app:cardElevation="2.5dp"
    app:strokeWidth="0dp">

    <RelativeLayout
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_background">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idACTVDay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="4dp"
            android:text="@string/date"
            android:textAlignment="center"
            android:textColor="?attr/colorText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idACTVTemperature"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idACTVDay"
            android:gravity="center"
            android:text="@string/avg_temperature"
            android:textAlignment="center"
            android:textColor="?attr/colorText"
            android:textSize="20sp" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/idACIVCondition"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_below="@id/idACTVTemperature"
            android:layout_centerHorizontal="true"
            android:padding="4dp"
            app:srcCompat="@mipmap/ic_launcher" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idACTVHumidity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idACIVCondition"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:gravity="center"
            android:padding="3dp"
            android:text="@string/humidity_long"
            android:textAlignment="center"
            android:textColor="?attr/colorText" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/idACTVWindSpeed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/idACTVHumidity"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:ellipsize="end"
            android:gravity="center"
            android:maxLines="1"
            android:padding="3dp"
            android:text="@string/wind_speed_short"
            android:textAlignment="center"
            android:textColor="?attr/colorText" />

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>